# FaceMeshProject

./: .gitignore  README.md  face_mesh.py  pyproject.toml  requirements.txt
src/face_mesh/: face_mesh_detector.py  main.py  utils.py
