# TODO: Substitua pelo nome da pasta criada dentro de src/
#(ex: name = "variavel_para_mudar")
# Atenção sempre a versão do python que está a usar, para a que está 
# aqui dentro

[project]
name = "face_mesh"
version = "0.1.0"
description = "Project dedicated to detecting drowsiness"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pedro Tenório", email = "pstsouza13@gmail.com" }]

# Dependências de produção (adicione com 'uv add' ou manualmente)
dependencies = [
    "mediapipe==0.10.9",
    "opencv-python>=4.13.0.90",
    "pygame>=2.6.1",
    "python-dotenv>=1.2.1",
]

[project.urls]
# TODO: Adicione o link do repositório quando ele existir
# Homepage = "https://github.com/"

[project.optional-dependencies]
# Dependências de desenvolvimento padrão
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-xdist"
]

[project.scripts]
# Define os comandos de console. A chave ('face_mesh') é o comando.
# O valor aponta para 'face_mesh.main:run_from_script'.
# Ex: 'my_package.main:run' -> src/my_package/main.py (e a função run lá dentro).
# Lembre-se de sincronizar o nome do pacote com 'known-first-party' do Ruff.
face_mesh = "face_mesh.main:run_face_mesh"

# ============================
# Build System
# ============================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/face_mesh"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }

# ============================
# Ferramentas: Ruff (Linter & Formatter)
# ============================
[tool.ruff]
line-length = 88
target-version = "py311"
fix = true
show-fixes = true
indent-width = 4
exclude = [
    "venv", ".venv", "env", ".env", "node_modules", "__pycache__"
]

[tool.ruff.lint]
# Seleção rigorosa de regras para manter o código limpo desde o dia 1
select = [
    "ASYNC", "A", "ANN", "B", "BLE", "C4", "C90", "COM", "E", "EM",
    "ERA", "EXE", "F", "FBT", "FIX", "I", "ICN", "ISC", "Q", "RET",
    "RSE", "S", "SIM", "SLF", "T10", "T20", "TC", "TD", "TRY", "UP",
    "W", "YTT", "RUF", "N"
]
ignore = ["T201", "COM812"] # T201 permite print (útil em scripts simples), remova se for face_mesh sério.

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"] # Ignora tipos de retorno e asserts em testes

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
# Ensina ao Ruff qual é o pacote principal do seu projeto.
# Deve ser o mesmo nome da pasta dentro de 'src/'.
known-first-party = ["face_mesh"]

# ============================
# Ferramentas: Pyright (Type Checker)
# ============================
[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"
include = ["src", "tests"]
exclude = [
    "**/venv", "**/.venv", "**/env", "**/.env",
    "**/node_modules", "**/__pycache__"
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]

# ============================
# Ferramentas: Pytest
# ============================
[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]
